@@ -1,5 +1,10 @@
 *** Changes since avr-libc-1.2.2:
 
+* Bugs fixed:
+
+  [#11987] sscanf parsing problem : leading zero ignored in %u
+
+
 *** Changes in avr-libc-1.2.2:
 
 * Bugs fixed:
