@@ -1,3 +1,8 @@
+2005-02-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* libc/stdio/vfscanf.c: fix field width accounting for leading
+	signs and/or 0/0x prefixes.  Fixes bug #11987.
+
 2005-02-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	Released avr-libc-1.2.2.
